Fixed a fricc ton of things

--- a/main/stylesheets/main.css
+++ b/main/stylesheets/main.css
@@ -1,9 +1,9 @@
-h2, h1 {
+h1, h2 {
   color: black;
   font-family: "Lobster", cursive;
 }
 
-footer, body {
+body, footer {
   color: black;
   font-family: "Staatliches", cursive;
 }
