--- a/main/stylesheets/maps.css
+++ b/main/stylesheets/maps.css
@@ -8,13 +8,14 @@ footer, body {
   font-family: "Staatliches", cursive;
 }
 
-sidebar, sidebar-footer, country {
+sidebar, country {
   font-family: "Contrail One", cursive;
 }
 
 body {
   font-size: 16px;
   background-color: slategray;
+  margin: 0px;
 }
 
 h1 {
@@ -48,7 +49,7 @@ country {
   font-size: 14px;
 }
 
-sidebar, sidebar-footer {
+sidebar {
   color: skyblue;
   font-size: 16px;
 }
@@ -59,34 +60,49 @@ elnakka-text {
   color: white;
 }
 
-sidebar-footer {
-  position: absolute;
-  left: 10;
-  bottom: 10;
-}
-
 .sidenav {
   height: 100%;
+  /* Full-height: remove this if you want "auto" height */
   width: 310px;
+  /* Set the width of the sidebar */
   position: fixed;
+  /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1;
+  /* Stay on top */
   top: 0;
+  /* Stay at the top */
   left: 0;
   background-color: darkslategray;
   overflow-x: hidden;
+  /* Disable horizontal scroll */
   padding-top: 5px;
   padding-left: 10px;
 }
 
 .main {
   margin-left: 320px;
+  /* Same as the width of the sidebar */
   padding: 0px 10px;
+  position: relative;
+  height: 100vh;
+  cursor: grab;
+  overflow: auto;
+}
+.main img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 .map {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+.map img {
   position: absolute;
+  width: 100%;
+  height: auto;
 }
 
 .controls {
