--- a/main/stylesheets/sass/maps.scss
+++ b/main/stylesheets/sass/maps.scss
@@ -15,7 +15,8 @@
 body {
     @extend %body-text;
     font-size: 16px;
-    background-color: slategray
+    background-color: slategray;
+    margin: 0px;
 }
 
 h1 {
@@ -66,35 +67,45 @@ elnakka-text {
     color: white;
 }
 
-sidebar-footer {
-    @extend sidebar;
-    position: absolute;
-    left: 10;
-    bottom: 10;
-  }
 
 .sidenav {
-    height: 100%; 
-    width: 310px; 
-    position: fixed; 
-    z-index: 1; 
-    top: 0; 
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 310px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
     left: 0;
     background-color: darkslategray; 
-    overflow-x: hidden; 
+    overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 5px;
     padding-left: 10px;
   }
   
   .main {
-    margin-left: 320px; 
+    margin-left: 320px; /* Same as the width of the sidebar */
     padding: 0px 10px;
+    position: relative;
+    height: 100vh;
+    overflow-x: auto;
+    overflow-y: auto;
+
+    img{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+    }
   }
 
   .map {
       width: 100%;
       height: 100%;
-      position: absolute;
+      position: relative;
+
+      img{
+          position: absolute;
+          width: 50%;
+          height: auto;
+      }
   }
 
   .controls {
