--- a/docs/stylesheets/sass/maps.scss
+++ b/docs/stylesheets/sass/maps.scss
@@ -96,7 +96,7 @@ doublediamond {
 
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 310px; /* Set the width of the sidebar */
+    width: 230px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -108,7 +108,7 @@ doublediamond {
   }
   
   .main {
-    margin-left: 320px; /* Same as the width of the sidebar */
+    margin-left: 240px; /* Same as the width of the sidebar */
     padding: 0px 10px;
     position: relative;
     height: 100vh;
@@ -166,6 +166,26 @@ doublediamond {
       top: 0%;
       left: 0%;
       
+  }
+
+
+  .lb {
+      @extend %sidebar-text;
+      color: palevioletred;
+      table {
+          tr:nth-child(1) {
+              @extend %sidebar-text;
+              @extend medals
+          }
+          tr:nth-child(2) {
+            @extend %sidebar-text;
+              @extend doublediamond
+          }
+          tr:nth-child(3) {
+            @extend %sidebar-text;
+              color: rgb(158, 103, 77);
+          }
+      }
   }
 
   /* width */
