--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -39,4 +39,33 @@ a:hover {
   color: palevioletred;
 }
 
+.sidenav {
+  height: 100%;
+  /* Full-height: remove this if you want "auto" height */
+  width: 230px;
+  /* Set the width of the sidebar */
+  position: fixed;
+  /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  left: 0;
+  background-color: rgba(112, 128, 144, 0.25);
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 5px;
+  padding-left: 10px;
+}
+
+.main {
+  margin-left: 240px;
+  /* Same as the width of the sidebar */
+  padding: 0px 10px;
+  position: relative;
+  height: 100vh;
+  overflow-x: auto;
+  overflow-y: auto;
+}
+
 /*# sourceMappingURL=main.css.map */
