--- a/docs/stylesheets/maps.css
+++ b/docs/stylesheets/maps.css
@@ -150,6 +150,11 @@ button {
   font-family: "Staatliches", cursive;
 }
 
+.inverse {
+  background-color: white;
+  color: darkslategray;
+}
+
 button:hover {
   color: palevioletred;
 }
