--- a/docs/stylesheets/sass/maps.scss
+++ b/docs/stylesheets/sass/maps.scss
@@ -156,6 +156,11 @@ doublediamond {
       font-family: 'Staatliches', cursive;;
   }
 
+  .inverse {
+    background-color: white;
+    color: darkslategray;
+}
+
   button:hover {
       color: palevioletred;
   }
