--- a/docs/stylesheets/maps.css
+++ b/docs/stylesheets/maps.css
@@ -44,6 +44,11 @@ a:hover {
   color: palevioletred;
 }
 
+a.hiddenlink {
+  color: darkslategray;
+  text-decoration: none;
+}
+
 country {
   color: palevioletred;
   font-size: 14px;
@@ -111,21 +116,21 @@ doublediamond, .lb table tr:nth-child(2) {
   overflow-x: auto;
   overflow-y: auto;
 }
-.main img {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
 
 .map {
   width: 100%;
-  height: auto;
+  height: 100%;
   position: relative;
 }
 .map img {
   position: absolute;
   width: 100%;
   height: auto;
+}
+
+.icons {
+  width: 100%;
+  height: 100%;
 }
 
 .controls {
