--- a/docs/stylesheets/sass/main.scss
+++ b/docs/stylesheets/sass/main.scss
@@ -11,7 +11,7 @@
 body {
     @extend %body-text;
     font-size: 16px;
-    background-image: url(/assets/background_img.png);
+    background-image: url(../assets/background_img.png)
 }
 
 h1 {
